--- a/src/Microsoft.AspNet.WebHooks.Custom.Api/Microsoft.AspNet.WebHooks.Custom.Api.csproj
+++ b/src/Microsoft.AspNet.WebHooks.Custom.Api/Microsoft.AspNet.WebHooks.Custom.Api.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2021.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
