--- a/test/Microsoft.TestUtilities/Microsoft.TestUtilities.csproj
+++ b/test/Microsoft.TestUtilities/Microsoft.TestUtilities.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
 	<IsPackable>false</IsPackable>
+	<IsTestProject>false</IsTestProject>
   </PropertyGroup>
 
 	<ItemGroup>
